Refactor project opening functionality by renaming the command to "Go" and enhancing the UI with project filtering and sorting options. Remove the deprecated "Search Projects" command and introduce a new method for retrieving projects by alias.

--- a/package.json
+++ b/package.json
@@ -16,13 +16,6 @@
   "license": "MIT",
   "commands": [
     {
-      "name": "search-projects",
-      "title": "Search Projects",
-      "subtitle": "Repo Radar",
-      "description": "Search and open project aliases with your preferred IDE",
-      "mode": "view"
-    },
-    {
       "name": "manage-projects",
       "title": "Manage Projects",
       "subtitle": "Repo Radar",
@@ -31,10 +24,11 @@
     },
     {
       "name": "open-project",
-      "title": "Open Project",
+      "title": "Go",
       "subtitle": "Repo Radar",
-      "description": "Open a project by ID (used by quicklinks)",
-      "mode": "no-view"
+      "description": "Quickly open a project by alias",
+      "mode": "view",
+      "keywords": ["open", "project", "go", "o", "jump", "cd"]
     },
     {
       "name": "clear-data",
