--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "repo-radar",
   "title": "Repo Radar",
-  "description": "Ultimate project manager to scan, track, and teleport into your workspaces with Git insights",
+  "description": "Quick project launcher with aliases, multi-workspace support, per-project IDE, Git status, favorites, and smart sorting",
   "icon": "extension-icon.png",
   "author": "zander_zi",
   "platforms": [
@@ -16,25 +16,26 @@
   "license": "MIT",
   "commands": [
     {
-      "name": "manage-projects",
-      "title": "Manage Projects",
-      "subtitle": "Repo Radar",
-      "description": "Add, edit or delete project aliases",
-      "mode": "view"
-    },
-    {
       "name": "open-project",
       "title": "Go",
       "subtitle": "Repo Radar",
-      "description": "Quickly open a project by alias",
+      "description": "Search, filter, and open projects with Git status preview",
       "mode": "view",
-      "keywords": ["open", "project", "go", "o", "jump", "cd"]
+      "keywords": ["open", "project", "go", "o", "jump", "cd", "search"]
+    },
+    {
+      "name": "manage-projects",
+      "title": "Add Project",
+      "subtitle": "Repo Radar",
+      "description": "Create a new project alias with paths and IDE",
+      "mode": "view",
+      "keywords": ["add", "new", "create", "manage"]
     },
     {
       "name": "clear-data",
       "title": "Clear All Data",
       "subtitle": "Repo Radar",
-      "description": "Clear all saved project data",
+      "description": "Delete all saved projects and reset extension",
       "mode": "no-view"
     }
   ],
