--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+node_modules/
 
 # Raycast specific files
 raycast-env.d.ts
@@ -10,5 +10,29 @@ raycast-env.d.ts
 compiled_raycast_swift
 compiled_raycast_rust
 
+# build output
+dist/
+build/
+
+# logs
+*.log
+npm-debug.log*
+
+# environment variables
+.env
+.env.local
+.env.*.local
+
+# editor/IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
 # misc
 .DS_Store
+Thumbs.db
+
+# Claude Code
+CLAUDE.md
